# final

verizon-ai-assistant/: .env  .env.example  langgraph.json  main.py  requirements.txt  setup.cfg  setup.py  setup_vector_store.py  test_api.py
verizon-ai-assistant/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
verizon-ai-assistant/agents/: customer_context_agent.py  document_retrieval_agent.py  sales_intelligence_agent.py  tool_using_agent.py
verizon-ai-assistant/data/: mock_crm.json  mock_sales_history.json
verizon-ai-assistant/data/documents/: current_promotions.txt  policy_manual.txt  product_brochure.txt  product_descriptions.txt  service_policies.txt  troubleshooting_guide.txt
verizon-ai-assistant/tools/: business_apis.py  crm_tools.py  retrieval_tools.py  sales_tools.py
verizon-ai-assistant/utils/: vector_store_setup.py
verizon-ai-assistant/vectorstore/: index.faiss  index.pkl
verizon-ai-assistant/verizon_assistant/: __init__.py
verizon-ai-assistant/verizon_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
