[metadata]
name = verizon-assistant
version = 0.1.0
description = Verizon Customer Service AI Assistant
author = Your Name

[options]
packages = find:
python_requires = >=3.11
install_requires =
    langgraph-supervisor
    langchain
    langchain-google-genai
    langchain_community
    faiss-cpu
    sentence-transformers
    python-dotenv
    langgraph-cli[inmem]
    langgraph-sdk

[options.entry_points]
console_scripts =
    verizon-assistant = main:main
